Provided editTodo feature & fixed overflow bug

--- a/src/Todo/TodoList/TodoItem/TodoItem.module.css
+++ b/src/Todo/TodoList/TodoItem/TodoItem.module.css
@@ -1,5 +1,5 @@
 .item li {
-    padding: 20px 0;
+    padding: 20px 15px;
     background-color: #fff;
     font-size: 24px;
     border-bottom: 1px solid #ededed;
@@ -10,17 +10,31 @@
     margin-right: 1rem;
 }
 
+.item .editInput {
+    color: #515151;
+    border: none;
+    margin: 0;
+    font-size: 24px;
+    outline: none;
+    padding-left: 20px;
+}
+
 .todoText {
+    margin-left: 20px;
     font-size: 22px;
     color: #888;
+    display: inline-block;
+    max-width: 435px;
+    word-break: break-all;
 }
 
 .container {
+    user-select: none;
     display: inline-block;
     position: relative;
 }
 
-.container input {
+.container .checkboxContainer {
     position: absolute;
     opacity: 0;
     cursor: pointer;
@@ -29,10 +43,10 @@
 }
 
 .checkmark {
-    margin: 5px 15px 0 20px;
+    margin-top: 5px;
     height: 25px;
     width: 25px;
-    background-color: #eee;
+    background-color: #eeeeee;
     float: left;
 }
 
@@ -46,9 +60,9 @@
 
 .checkmark:after {
     content: "";
-    position: absolute;
     display: none;
     margin-top: 5px;
+    margin-left: 8px;
 }
 
 .container input:checked ~ .checkmark:after {
@@ -60,7 +74,7 @@
     top: 5px;
     width: 5px;
     height: 10px;
-    border: solid white;
+    border: solid #f1f1f1;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
